kubernetes/apps/security/keycloakx/app/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloakx
spec:
  parentRefs:
  - name: external-gateway-cilium
    namespace: network
    sectionName: https
  hostnames:
  - "auth.${SECRET_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: keycloakx-http
      namespace: security
      port: 80
